--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.4",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "redux-toolkit": "^1.1.2"
+    "redux-saga": "^1.2.2",
+    "redux-toolkit": "^1.1.2",
+    "saga": "^4.0.0-alpha"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
