--- a/app.json
+++ b/app.json
@@ -18,7 +18,9 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.redux.redux-native-app",
+      "buildNumber": "1.0.0"
     },
     "android": {
       "adaptiveIcon": {
